--- a/program/app/src/main/AndroidManifest.xml
+++ b/program/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <!--permission untuk akses internet-->
+    <!-- permission untuk akses internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Agrimateee"
         tools:targetApi="31">
+        <activity
+            android:name=".Activity.SplashActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.MainActivity"
             android:exported="false" />
