--- a/program/app/src/main/AndroidManifest.xml
+++ b/program/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Agrimateee"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.AboutActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activity.SplashActivity"
             android:exported="false" />
         <activity
